1. remove volleyer 2. update app package name ~.menu 3. Create DTO - DayCuisionsDTO 4. Use google analytics

--- a/src/menu/app/src/main/res/layout/activity_main.xml
+++ b/src/menu/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="net.rivergod.sec.seoulrnd.android.menu_seoulrnd.MainActivity">
+    tools:context="net.rivergod.sec.seoulrnd.android.menu.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
