--- a/src/menu/app/src/main/res/values/dimens.xml
+++ b/src/menu/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="screen_max">360dp</dimen>
+    <dimen name="close_menu">60dp</dimen>
 </resources>
