--- a/src/menu/app/src/main/res/drawable/round_rect_line.xml
+++ b/src/menu/app/src/main/res/drawable/round_rect_line.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <stroke android:color="#b9b9b9" android:width="1dp"/>
-    <solid android:color="#77FFFFFF"/>
+    <solid android:color="#FFFFFF"/>
 
     <corners
-        android:radius="2.5dp" />
+        android:radius="10dp" />
 
 </shape>
