--- a/src/menu/app/src/main/res/layout/option_menu.xml
+++ b/src/menu/app/src/main/res/layout/option_menu.xml
@@ -38,15 +38,31 @@
                 android:background="#33373a"/>
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:includeFontPadding="false"
-                android:background="#66607d8b"
-                android:gravity="center"
-                android:textColor="#e5e5e5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#FFFFFF"
+                android:textSize="10sp"
                 android:textStyle="bold"
-                android:textSize="17sp"
-                android:text="Option Menu"/>
+                android:text="식당 운영 시간"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="...."
+                />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/menu_position"/>
 
             <View
                 android:layout_width="match_parent"
@@ -433,14 +449,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="0.75dp"
                 android:background="#33373a"/>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:background="@drawable/menu_position"/>
 
         </LinearLayout>
 
