--- a/src/menu/app/src/main/res/layout/option_menu.xml
+++ b/src/menu/app/src/main/res/layout/option_menu.xml
@@ -45,20 +45,24 @@
                 android:textColor="#FFFFFF"
                 android:textSize="10sp"
                 android:textStyle="bold"
-                android:text="식당 운영 시간"
+                android:text="식당 운영 시간 / MAP"
                 />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="...."
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="10dp"
+                android:textColor="#FFFFFF"
+                android:textSize="9sp"
+                android:text="조식 [07:00 ~ 08:20 (Take Out: 09:20)]\n중식 [11:30 ~ 13:00]\n석식 [17:30 ~ 19:00 (Take Out X)] "
+
                 />
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="10dp"
@@ -384,6 +388,7 @@
                         android:gravity="center"
                         android:textColor="#FFFFFF"
                         android:textSize="10sp"
+                        android:tag="4"
                         />
 
                     <View
