--- a/src/menu/app/src/main/res/layout/option_menu.xml
+++ b/src/menu/app/src/main/res/layout/option_menu.xml
@@ -61,11 +61,11 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="150dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="1dp"
                 android:background="@drawable/menu_position"/>
 
             <View
@@ -77,21 +77,15 @@
                 android:layout_height="0.75dp"
                 android:background="#33373a"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:gravity="center">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:textColor="#e5e5e5"
-                    android:textStyle="bold"
-                    android:textSize="17sp"
-                    android:text="Alarm Setting"/>
-                
-            </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:layout_gravity="center"
+                android:textColor="#e5e5e5"
+                android:textStyle="bold"
+                android:textSize="17sp"
+                android:text="Alarm Setting"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
