start version 0.9.14 (code 15)

--- a/src/menu/app/src/main/res/layout/header_item.xml
+++ b/src/menu/app/src/main/res/layout/header_item.xml
@@ -10,7 +10,8 @@
     android:textColor="#2c236d"
     android:textStyle="bold"
     android:textSize="15sp"
-    app:slm_headerDisplay="inline|sticky"
-    app:slm_isHeader="true"
     />
+<!--    app:slm_headerDisplay="inline|sticky"-->
+<!--    app:slm_isHeader="true"-->
+
 
