--- a/src/menu/app/src/main/res/layout/content_main.xml
+++ b/src/menu/app/src/main/res/layout/content_main.xml
@@ -8,9 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="net.rivergod.sec.seoulrnd.android.menu.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="net.rivergod.sec.seoulrnd.android.menu.MainActivityJava"
+    tools:showIn="@layout/activity_main"
+    >
+    <!-- app:layout_behavior="@string/appbar_scrolling_view_behavior" -->
 
     <TextView
         android:layout_width="wrap_content"
